# PranavM.WxTechChallengeService.WooliesRecruitmentService.Accessors/ServiceClients/Responses/ProductResponse.cs
@@ -1,0 +1,11 @@
+namespace PranavM.WxTechChallengeService.WooliesRecruitmentService.Accessors.ServiceClients.Responses
+{
+    public class ProductResponse
+    {
+        public string Name { get; set; }
+
+        public decimal Price { get; set; }
+
+        public decimal Quantity { get; set; }
+    }
+}
